# prsc

./: .gitignore  README.md  crypt.py  database.py  prsc.db  prsc.py  prsc.sqbpro  pyproject.toml  requirements.txt
logic/: crypt.py  csv_export.py  database.py  json_export.py  xml_export.py
static/styles/: index.css  main.css
templates/: add_password.html  db.html  del_password.html  index.html  login.html  master.html  master_password.html  register.html  script.js
